--- a/index.html
+++ b/index.html
@@ -41,7 +41,7 @@
       background: #6b0000;
     }
     .remover {
-      background: #ffffff;
+      background: #990000;
       margin-top: 5px;
     }
     .logout {
