--- a/index.html
+++ b/index.html
@@ -50,7 +50,7 @@
     }
     .switch {
       background: transparent;
-      color: #ffffff;
+      color: #9b0000;
       border: none;
       text-align: left;
       margin-top: 10px;
