--- a/index.html
+++ b/index.html
@@ -137,9 +137,9 @@
 
   <script>
     const produtosDefault = [
-      { id: 1, nome: 'Camisa azul', preco: 49.90, estoque: 5 },
-      { id: 2, nome: 'Calça Jeans', preco: 89.90, estoque: 3 },
-      { id: 3, nome: 'Tênis', preco: 129.90, estoque: 2 },
+      { id: 1, nome: 'Camisa azul', preco: 49.90, estoque: 85 },
+      { id: 2, nome: 'Calça Jeans', preco: 89.90, estoque: 63 },
+      { id: 3, nome: 'Tênis air jordan 1', preco: 129.90, estoque: 29 },
     ];
 
     let produtos = JSON.parse(localStorage.getItem('produtos')) || produtosDefault;
